--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,8 +15,7 @@ Build_Go:
 Compress_upx:
   image:
     name: kolaente/upx
-    entrypoint:
-      - /bin/sh -c
+    entrypoint: [""]
   stage: compress
   dependencies:
     - Build_Go
